# klee

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile.common  Makefile.config.in  README-CMake.md  README.md  configure
.travis/: install-llvm-and-runtime-compiler.sh  klee.sh
autoconf/: configure.ac
cmake/: add_global_flag.cmake  c_flags_override.cmake  compiler_warnings.cmake  cxx_flags_override.cmake  cxx_warnings.cmake  find_bitcode_compiler.cmake  find_llvm.cmake  find_metasmt.cmake  klee_add_component.cmake  klee_component_add_cxx_flag.cmake
include/klee/: CommandLine.h  Common.h  Expr.h  ExprSMTLIBPrinter.h  SMTLIBSolver.h  Solver.h
include/klee/Config/: config.h.cmin  config.h.in
include/klee/util/: ExprSMTLIBLetPrinter.h  ExprSMTLIBPrinter.h  PrintContext.h
lib/Basic/: CMakeLists.txt  CmdLineOptions.cpp
lib/Core/: CMakeLists.txt  Executor.cpp  Executor.h  TimingSolver.h
lib/Expr/: CMakeLists.txt  Expr.cpp  ExprSMTLIBLetPrinter.cpp  ExprSMTLIBPrinter.cpp
lib/Module/: CMakeLists.txt  KModule.cpp
lib/Solver/: CMakeLists.txt  CoreSolver.cpp  SMTLIBLoggingSolver.cpp  SMTLIBOutputLexer.cpp  SMTLIBOutputLexer.h  SMTLIBSolver.cpp  STPBuilder.cpp  Solver.cpp  Z3Builder.cpp  Z3Builder.h  Z3Solver.cpp
lib/Support/: CMakeLists.txt
runtime/: CMakeLists.txt  Makefile.cmake.bitcode  Makefile.cmake.bitcode.config.in  Makefile.cmake.bitcode.rules
runtime/Intrinsic/: Makefile.cmake.bitcode  klee_overshift_check.c
runtime/POSIX/: Makefile.cmake.bitcode
runtime/Runtest/: CMakeLists.txt
runtime/klee-libc/: Makefile.cmake.bitcode
scripts/: count-smtlibv2-query-types  klee-split-smt2-query-log  pull-smtlibv2-queries
test/: CMakeLists.txt
test/Concrete/: CMakeLists.txt  Makefile.cmake.test.in
test/Feature/: OvershiftCheck.c
tools/: CMakeLists.txt
tools/kleaver/: CMakeLists.txt  Makefile  main.cpp
tools/klee/: CMakeLists.txt  Makefile  main.cpp
tools/klee-replay/: CMakeLists.txt
tools/ktest-tool/: CMakeLists.txt
unittests/: CMakeLists.txt
unittests/Solver/: Makefile  SolverTest.cpp
www/: GetStarted.html
